# fastzdp_sqlalchemy

./: .gitignore  README.md  pyproject.toml
examples/c01_teach_20240901/: c01_sqlite_memory.py  c02_sqlite_file.py  c03_mysql.py  c04_id.py  c05_base_model.py  c06_session.py  c07_sessionmaker.py  c08_add_all.py  c09_get_id.py  c10_get_all.py  c11_get_column.py  c12_execute_sql.py  c13_update_id.py  c14_excute_update.py  c15_delete_id.py  c16_execute_delete.py  c17_is_null.py  c18_is_not_null.py  c19_like.py  c20_in.py  c21_or.py  c22_salary_avg.py  c23_id_count.py  c24_offset_limit.py  c25_order_by.py  c26_group_count.py
examples/c02_advance_teach_20240901/: c01_department.py  c02_add_department.py  c03_get_department.py  c04_department_add_employees.py  c05_employee_add_department.py  c06_employee_update_department.py  c07_department_employees.py  c08_employee_set_department_none.py  c09_department.py  c10_add_department.py  c11_id_card.py  c12_employee_add_idcard.py  c13_user_role.py  c14_user_add_roles.py  c15_employee_job_time.py  c16_add_departments_employees.py  c17_query_employee_department.py  c18_idcard_add_employee.py  c19_query_idcard_employee.py  c20_query_department_emloyee_count.py  c21_query_user_role_count.py  c22_query_user_role_count.py
